--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,6 @@ nav{display: flex;padding: 1rem;}
     .menuBurger span{height: 8px; width: 100%;background-color: black;border-radius: 25px; position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);transition: .3s ease;}
 }
 @media (min-width: 992px) {
-    .navMobile{opacity: 0; position: absolute;z-index: -1;}
+    .navMobile{display: none;}
     .navWeb{top: 1rem; opacity: 100 !important; position: static !important;}
 }
