--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,8 @@
 /*imported font family*/
 .jua-regular {font-family: "Jua", serif;font-weight: 400;font-style: normal;}
-/*CSS custom pour menu web*/
+/*CSS custom pour menu client lien a formulaire*/
+.fondJaune{background-color: #FFE41B;}
+/*CSS custom pour menu web admin/client*/
 .nude{text-decoration: none; color: black;font-family: "Jua", serif;}
 .selection{background-color: #FF6D6D; font-size: 1rem; color: white;}
 /*CSS custom pour menu Burger*/
