correction d'erreur survenue lors de l'implimentation des navs

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,7 +8,7 @@
 /*CSS custom pour menu Burger*/
 li{list-style: none;}
 nav{display: flex;padding: 1rem;}
-.horsChamps{background-color: white; height: 100vh; width: 100%; max-width: 450px; position: fixed; top: 0; right: -450px; display: flex; flex-direction: column; justify-content: center; text-align: center; font-size: 3rem; transition: .3s ease;}
+.horsChamps{background-color: white; height: 100vh; width: 100%; max-width: 250px; position: fixed; top: 0; right: -450px; display: flex; flex-direction: column; justify-content: center; text-align: center; font-size: 3rem; transition: .3s ease;padding-right: 5%;}
 .horsChamps.active{right: 0;}
 .menuBurger{height: 50px; width: 50px; position: relative;z-index: 2;}
 .menuBurger span{height: 5px; width: 100%;background-color: black;border-radius: 25px; position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);transition: .3s ease;}
@@ -18,6 +18,10 @@ nav{display: flex;padding: 1rem;}
 .menuBurger.active span:nth-child(2){ opacity: 0;}
 .menuBurger.active span:nth-child(3){ top: 50%;transform: translate(-50%,-50%) rotate(-45deg);}
 /*changement de menu celon la taille de notre page entre menu burger pour telephone et ipad et menu trad pour web*/
+@media(min-width:450){
+    .horsChamps{background-color: white; height: 100vh; width: 100%; max-width: 450px; position: fixed; top: 0; right: -450px; display: flex; flex-direction: column; justify-content: center; text-align: center; font-size: 3rem; transition: .3s ease;padding-right: 5%;}
+    .horsChamps.active{right: 0;}   
+}
 @media (min-width:750px){
     .menuBurger{height: 80px; width: 80px; position: relative;z-index: 2;margin-top: 1rem;}
     .menuBurger span{height: 8px; width: 100%;background-color: black;border-radius: 25px; position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);transition: .3s ease;}
