Revert "Mise a jour CSS"
This reverts commit bb35b4bf012d3b81ed4549c992c7ed34ea611724.

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -28,5 +28,5 @@ nav{display: flex;padding: 1rem;}
 }
 @media (min-width: 992px) {
     .navMobile{display: none;}
-    .navWeb{top: 1rem; opacity: 100 !important; position: static !important;display: unset !important;}
+    .navWeb{top: 1rem; opacity: 100 !important; position: static !important;}
 }
