--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -28,7 +28,7 @@ nav{display: flex;padding: 1rem;}
 }
 @media (min-width: 992px) {
     .navMobile{display: none;}
-    .navWeb{top: 1rem; opacity: 100 !important; position: static !important;}
+    .navWeb{top: 1rem; opacity: 100 !important; position: static !important;display: unset !important;}
 }
 
 .info {
