Mise en place des icon

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -6,7 +6,7 @@ body{color: #333;}
 .colorR{color:#F16560;}
 /*CSS pour les icon*/
 .iconPlus{font-size: 8rem;color: #000;}
-.iconChevron{font-size: 1.5rem;color: #000;}
+.iconNoir{font-size: 1.5rem;color: #000;}
 .iconFleche{font-size: 1.3rem;color: #000;}
 /*CSS custom pour menu client lien a formulaire*/
 .fondJaune{background-color: #FFE41B;}
