--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,7 +1,36 @@
-body{color: #333;}
+/* Importation des polices d'écriture */
+
+@font-face {
+    font-family: "Miso";
+    src: url(../fonts/miso.otf);
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Miso", sans-serif;
+}
+
+h1, h2, h3, h5, h6 {
+    text-transform: uppercase;
+}
+
+h1, h2 {
+    font-size: 36px !important;
+}
+
+header h6 {
+    font-size: 18px;
+}
+
+body {
+    color: #333;
+    font-family: "Roboto", sans-serif;
+}
+
+/* Barre de navigation (client et admin) */
+
 /*imported font family & class font*/
-.jua-regular{font-family: "Jua", serif;font-weight: 400;font-style: normal;}
-.font{font-family: "Jua", serif;}
 .colorB{color: #5FB3E4;}
 .colorR{color:#F16560;}
 /*CSS pour les icon*/
@@ -41,6 +70,7 @@ nav{display: flex;padding: 1rem;}
     .navWeb{top: 1rem; display: block !important;}
 }
 
+/* Autres sections */
 
 .info {
     text-align: center;
