--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,45 +1,9 @@
-/* Importation des polices d'écriture */
-
-@font-face {
-    font-family: "Miso";
-    src: url(../fonts/miso.otf);
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Miso", sans-serif;
-}
-
-h1, h2, h3, h5, h6 {
-    text-transform: uppercase;
-}
-
-h1, h2 {
-    font-size: 36px !important;
-}
-
-header h6, footer h6 {
-    font-size: 18px;
-}
-
-body {
-    color: #333;
-    font-family: "Roboto", sans-serif;
-}
-
-/* Barre de navigation (client et admin) */
-
-/*imported font family & class font*/
-.colorB{color: #5FB3E4;}
-.colorR{color:#F16560;}
-/*CSS pour les icon*/
-.iconPlus{font-size: 8rem;color: #000;}
-.iconNoir{font-size: 1.5rem;color: #000;}
-.iconFleche{font-size: 1.3rem;color: #000;}
+/*imported font family*/
+.jua-regular {font-family: "Jua", serif;font-weight: 400;font-style: normal;}
 /*CSS custom pour menu client lien a formulaire*/
 .fondJaune{background-color: #FFE41B;}
 /*CSS custom pour menu web admin/client*/
+.font{font-family: "Jua", serif;}
 .nude{text-decoration: none; color: black;}
 .selection{background-color: #FF6D6D; font-size: 1rem; color: white;}
 /*CSS custom pour menu Burger*/
@@ -70,7 +34,25 @@ nav{display: flex;padding: 1rem;}
     .navWeb{top: 1rem; display: block !important;}
 }
 
-/* Autres sections */
+
+.info {
+    text-align: center;
+}
+
+#descriptionStage {
+    padding-right: 15%;
+    padding-left: 15%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: justify;
+}
+
+.h2-custom {
+    color: #5FB3E4;
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
 .btn-yellow {
     background-color: #FFE41B;
     color: #000;
@@ -79,40 +61,117 @@ nav{display: flex;padding: 1rem;}
     border-radius: 30px;
     padding: 10px 20px;
     font-size: 16px;
+    cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .btn-yellow:hover {
     background-color: #CEB70B;
-}
-
-.btn-warning {
-    font-family: "Miso", sans-serif;
-    font-size: 18px;
-    background-color: #FFE41B;
-    border: none;
-    border-radius: 30px;
-    color: #000;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-}
-
-.btn-warning:hover {
-    background-color: #CEB70B;
-    transform: translateY(-3px);
     color: #000;
 }
 
-.img-custom {max-height: 400px; object-fit: cover;}
+#autresStages img {
+    height: 200px;
+    object-fit: cover;
+}
+
+#autresStages {
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+#autresStages .card {
+    margin: 10px auto;
+}
+
+.text-center .btn-yellow {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+.info ul li {
+    line-height: 2.8;
+}
+#animateurs .col-md-4 {
+    margin-bottom: 40px; 
+}
+
+#animateurs {
+    justify-content: center;
+    margin-left: auto; 
+    margin-right: auto;
+    margin-bottom: 80px;
+    margin-bottom: 80px;
+}
+
+section img {
+    object-fit: cover;
+}
+
+section h4 {
+    color: #000000;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+section p {
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #555;
+    text-align: left;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    color: #333;
+}
+
+.text-stage {
+    color: #5FB3E4;
+    font-size: 2rem;
+}
+
+.img-custom {
+    max-height: 400px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.text-stage {
+    color: #5FB3E4;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-top: 2%;
+    padding-bottom: 2.5%;
+}
+
+.img-fluid {
+    padding-bottom: 2.5%;
+}
 
 .container.my-5 {
     padding-top: 2.5%;
     padding-bottom: 2.5%;
 }
 
+.bi {
+    font-size: 50px;
+    color: #F16560;
+}
+
 p {
     font-size: 1rem;
     line-height: 1.6;
     color: #555;
+}
+
+.row div {
+    transition: transform 0.3s ease-in-out;
+}
+
+.row div:hover {
+    transform: translateY(-5px);
 }
 
 .carousel-caption {
@@ -125,14 +184,16 @@ p {
 }
 
 .carousel-caption h2 {
-    color: #ffffff;
     font-size: 1.5rem;
     font-weight: bold;
+    padding-top: 15px;
+    color: #ffffff;
 }
 
 .carousel-caption p {
     color: #ffffff;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    text-align: justify;
 }
 
 #carouselExampleIndicators {
@@ -147,102 +208,89 @@ p {
     width: 100%;
 }
 
+.py-5.bg-light {
+    padding-top: 0% !important;
+    padding-bottom: 0% !important;
+}
 
-
-/* Style personnalisé pour les boutons de navigation du carrousel */
 .carousel-control-prev, .carousel-control-next {
-    background-color: #F16560;  /* Fond rouge */
-    border-radius: 50%;      /* Forme ronde */
-    width: 50px;             /* Largeur du bouton */
-    height: 50px;            /* Hauteur du bouton */
-    display: flex;           /* Pour centrer les icônes à l'intérieur */
-    justify-content: center; /* Centrer l'icône */
-    align-items: center;     /* Centrer l'icône */
-    opacity: 0.7;            /* Opacité pour l'effet visuel */
+    background-color: #F16560;  
+    border-radius: 50%;     
+    width: 50px;             
+    height: 50px;          
+    display: flex;      
+    justify-content: center;
+    align-items: center;     
+    opacity: 0.7;           
     transition: opacity 0.3s;
     margin-top: 275px;
     margin-left: 200px;
     margin-right: 200px;
 }
 
-  /* Réduire l'opacité au survol pour un effet visuel */
 .carousel-control-prev:hover, .carousel-control-next:hover {
-    opacity: 1; /* Pleine opacité au survol */
+    opacity: 1;
 }
 
-  /* Style des icônes de navigation (précédent et suivant) */
 .carousel-control-prev-icon, .carousel-control-next-icon {
-    border-radius: 50%;      /* Garde la forme ronde pour l'icône */
-    width: 20px;             /* Taille de l'icône */
-    height: 20px;            /* Taille de l'icône */
+    border-radius: 50%;      
+    width: 20px;             
+    height: 20px;            
 }
 
-/* Styles globaux des cartes animateurs */
-.animateur-card {
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    min-height: 280px; /* Hauteur minimale pour toutes les cartes */
-    overflow: hidden; /* Empêche tout débordement */
+.stage-card {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    overflow: hidden;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-/* Taille fixe et image en cercle */
-.animateur-photo {
-    width: 150px;
-    height: 150px;
+.stage-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.stage-card img {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    height: 400px;
     object-fit: cover;
-    border: 3px solid #fff;
-    border-radius: 50%; /* Cercle parfait */
-    flex-shrink: 0; /* Empêche l'image de réduire */
 }
 
-/* Texte de la carte */
-.animateur-card h3 {
-    font-weight: bold;
-    margin-bottom: 8px;
+a {
+    text-decoration: none;
 }
 
-.animateur-card p {
-    margin-bottom: 4px;
-    color: #6c757d; /* Gris Bootstrap */
+.carousel-caption {
+    bottom: 15%;
 }
 
-.suppr, .modif {
-    width: 50px;
-    height: 50px;
-    background-color: #FFE41B;
-    border: none;
-    border-radius: 50%;
-    color: #000;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+.carousel-caption h2 {
+    font-size: 0.7rem; 
 }
 
-.suppr:hover, .modif:hover {
-    background-color: #CEB70B;
-    transform: translateY(-3px);
-    color: #000;
+@media (min-width: 768px) {
+    .carousel-caption h2 {
+        font-size: 1.3rem; 
+    }
+
+    .carousel-caption p {
+        font-size: 0.8rem;
+    }
 }
 
-.ajouter {
-    display: inline-block; /* Garde le bouton compact */
-    padding: 5px 10px; /* Dimensions réduites pour un bouton plus petit */
-    background-color: #dc3545;
-    border: none;
-    border-radius: 20px; /* Forme légèrement arrondie */
-    color: #ffffff;
-    text-decoration: none; /* Supprime le soulignement */
-    font-size: 16px; /* Taille de texte réduite */
-    font-weight: bold; /* Texte en gras */
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    margin-bottom: 20px;
-    cursor: pointer;
-    width: auto; /* Garde la largeur ajustée au texte */
-    text-align: center;
+@media (min-width: 992px) {
+    .carousel-caption h2 {
+        font-size: 1.8rem; 
+    }
+    .carousel-caption p {
+        font-size: 1.0rem;
+    }
 }
 
-#liste_animateur {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    flex-direction: column; 
+@media (min-height:768px) {
+    #carouselExampleIndicators img {
+        height: 400px;
+        width: 100%;
+    }
 }
