--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -11,8 +11,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Miso", sans-serif;
 }
 
-h1, h2, h3, h5, h6 {
+h1, h2, h3, h5, h6, legend {
     text-transform: uppercase;
+}
+
+form h5{
+    text-transform:none;
 }
 
 h1, h2 {
@@ -87,6 +91,9 @@ nav{display: flex;padding: 1rem;}
 }
 
 .btn-warning {
+    text-transform: uppercase;
+    padding: 10px 20px;
+    
     font-family: "Miso", sans-serif;
     font-size: 18px;
     background-color: #FFE41B;
